--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "prod": "vite build",
+        "production": "npm run prod"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.3.0"
     }
 }
