--- a/composer.json
+++ b/composer.json
@@ -5,27 +5,26 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1.0",
+        "php": "^8.2.12",
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.8",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.0",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
         "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.65",
         "phpoffice/phpspreadsheet": "^1.26",
-        "psr/simple-cache": "2.0",
-        "symfony/mailer": "^6.2",
-        "yajra/laravel-datatables-oracle": "^10.11"
+        "psr/simple-cache": ">=2.0 <3.0",
+        "symfony/mailer": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0"
        
