modifique index.php en public, y el htacces para que ahora ingrese por https://app.epsianaswayuu.com/rutasintegrales/

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,7 @@
     </IfModule>
 
     RewriteEngine On
+    RewriteBase /rutasintegrales/
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
