--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,7 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase /rutasintegrales/
+    #RewriteBase /rutasintegrales/
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
